fix: 어플 실행 이슈로 cloud, elastic search 종속성 주석 처리

--- a/pom.xml
+++ b/pom.xml
@@ -14,22 +14,22 @@
     <name>book-store-back</name>
     <description>book-store-back</description>
 
-    <properties>
-        <java.version>21</java.version>
-        <spring-cloud.version>2023.0.2</spring-cloud.version>
-    </properties>
+    <!--    <properties>-->
+    <!--        <java.version>21</java.version>-->
+    <!--        <spring-cloud.version>2023.0.2</spring-cloud.version>-->
+    <!--    </properties>-->
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+    <!--    <dependencyManagement>-->
+    <!--        <dependencies>-->
+    <!--            <dependency>-->
+    <!--                <groupId>org.springframework.cloud</groupId>-->
+    <!--                <artifactId>spring-cloud-dependencies</artifactId>-->
+    <!--                <version>${spring-cloud.version}</version>-->
+    <!--                <type>pom</type>-->
+    <!--                <scope>import</scope>-->
+    <!--            </dependency>-->
+    <!--        </dependencies>-->
+    <!--    </dependencyManagement>-->
 
     <dependencies>
         <!-- Lombok Dependencies -->
@@ -62,14 +62,14 @@
         <!--                    <groupId>org.springframework.cloud</groupId>-->
         <!--                    <artifactId>spring-cloud-starter-gateway</artifactId>-->
         <!--                </dependency>-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.cloud</groupId>-->
+        <!--            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.cloud</groupId>-->
+        <!--            <artifactId>spring-cloud-starter-config</artifactId>-->
+        <!--        </dependency>-->
 
         <!-- JPA and QueryDSL -->
         <dependency>
@@ -95,10 +95,10 @@
         </dependency>
 
         <!-- Elasticsearch Dependency -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.boot</groupId>-->
+        <!--            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>-->
+        <!--        </dependency>-->
 
         <!-- Testing Dependencies -->
         <dependency>
