--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,6 @@
 spring:
   application:
     name: "book-store-back"
-  config:
-    import: optional:configserver:http://localhost:8080
 
   datasource:
     url: jdbc:mysql://133.186.241.167:3306/be6_5ritang
@@ -11,11 +9,23 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
-    hibernate:
-      ddl-auto: update
+    open-in-view: false
+    show-sql: true
     properties:
       hibernate:
+        format_sql: true
+        use_sql_comments: true
+        highlight_sql: true
+        auto_quote_keyword: true
         dialect: org.hibernate.dialect.MySQLDialect
+    hibernate:
+      ddl-auto: update
+    defer-datasource-initialization: true
+  sql:
+    init:
+      mode: always
 
-server:
-  port: 8080
+logging:
+  level:
+    org.hibernate.orm.jdbc.bind: trace
+    org.springframework.transaction.interceptor: trace
