refactor: autowired 생성자 주입으로 변경 및 에러코드 상수화, 에러 발생을 먼저 처리로 변경, 트랜젝션 처리 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
         auto_quote_keyword: true
         dialect: org.hibernate.dialect.MySQLDialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: update #validate로 변경 예정
     defer-datasource-initialization: true
   sql:
     init:
