--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: "5ritang-book-store-back"
+    name: "book-store-back"
 
   datasource:
     url: jdbc:mysql://133.186.241.167:3306/be6_5ritang
