--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,11 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.nhnacademy</groupId>
-    <artifactId>book-store-back</artifactId>
+    <artifactId>5ritang-book-store-back</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>book-store-back</name>
     <description>book-store-back</description>
+
 
     <!--    <properties>-->
     <!--        <java.version>21</java.version>-->
@@ -146,6 +147,10 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
     </dependencies>
 
