--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,13 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
+        <!-- dbcp2 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.12.0</version>
+        </dependency>
+
         <!-- Testing Dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
