fix: 환경 프로퍼티 암호화 이후 빌드 안 되는 이슈 해결

--- a/.github/workflows/ci_workflow.yml
+++ b/.github/workflows/ci_workflow.yml
@@ -17,6 +17,9 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+        env:
+          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+          REDIS_PASSWORD: ${{ secrets.REDIS_PASSWORD }}
 
       # 소나큐브 테스트 커버리지 측정
       - name: Build and analyze with SonarQube
