fix : git actions 에 MYSQL_PASSWORD 추가

--- a/.github/workflows/cd_workflow.yml
+++ b/.github/workflows/cd_workflow.yml
@@ -22,6 +22,7 @@ jobs:
         run: mvn -B package --file pom.xml
         env:
           REDIS_PASSWORD: ${{ secrets.REDIS_PASSWORD }}
+          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
 
 
       - name: Copy files via SCP
