feat: 인증 서버 분리로 로그인 기능 분리

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -29,3 +29,6 @@ logging:
         interceptor: trace
         security: debug
         web: debug
+
+remote-addr: 127.0.0.1
+#remote-addr: 0:0:0:0:0:0:0:1
