--- a/.github/workflows/cd_workflow.yml
+++ b/.github/workflows/cd_workflow.yml
@@ -64,7 +64,7 @@ jobs:
           script_stop: true
           script: |
             echo "Starting new application..."
-            nohup java -jar ~/target/BOOK-STORE-FRONT.jar --server.pofiles.active=${{secrets.SPRING_PROFILE}} --server.port=${{ secrets.BACK_PORT }} > app.log 2>&1 &
+            nohup java -jar ~/target/BOOK-STORE-BACK.jar --server.pofiles.active=${{secrets.SPRING_PROFILE}} --server.port=${{ secrets.BACK_PORT }} > app.log 2>&1 &
             echo "New application started. Check app.log for details."
 
 
