--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,7 @@
     </dependencies>
 
     <build>
+        <finalName>BOOK-STORE-BACK</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
