fix "springcloud test를 위해 매핑다시하기"

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,3 +1,13 @@
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://admin:1234@133.186.150.78:8761/eureka
+  instance:
+    prefer-ip-address: true
+
+
 spring:
 
   # JPA 설정
