--- a/pom.xml
+++ b/pom.xml
@@ -14,22 +14,22 @@
     <name>book-store-back</name>
     <description>book-store-back</description>
 
-    <!--    <properties>-->
-    <!--        <java.version>21</java.version>-->
-    <!--        <spring-cloud.version>2023.0.2</spring-cloud.version>-->
-    <!--    </properties>-->
+        <properties>
+            <java.version>21</java.version>
+            <spring-cloud.version>2023.0.2</spring-cloud.version>
+        </properties>
 
-    <!--    <dependencyManagement>-->
-    <!--        <dependencies>-->
-    <!--            <dependency>-->
-    <!--                <groupId>org.springframework.cloud</groupId>-->
-    <!--                <artifactId>spring-cloud-dependencies</artifactId>-->
-    <!--                <version>${spring-cloud.version}</version>-->
-    <!--                <type>pom</type>-->
-    <!--                <scope>import</scope>-->
-    <!--            </dependency>-->
-    <!--        </dependencies>-->
-    <!--    </dependencyManagement>-->
+        <dependencyManagement>
+            <dependencies>
+                <dependency>
+                    <groupId>org.springframework.cloud</groupId>
+                    <artifactId>spring-cloud-dependencies</artifactId>
+                    <version>${spring-cloud.version}</version>
+                    <type>pom</type>
+                    <scope>import</scope>
+                </dependency>
+            </dependencies>
+        </dependencyManagement>
 
     <dependencies>
         <!-- Lombok Dependencies -->
@@ -189,6 +189,12 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
