--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -3,7 +3,7 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://admin:1234@133.186.150.78:8761/eureka
+      defaultZone: http://admin:1234@localhost:8761/eureka
   instance:
     prefer-ip-address: true
 
